--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">RPGu</string>
+    <string name="detail_page_name">Skill Detail</string>
     <string name="action_settings">Settings</string>
 
     <!-- Activities Fragment Strings -->
